Add fail-fast OAuth2 token endpoint validation for connector checks